[package]
name = "anima_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.16"
cgmath = "0.18.0"
strum = "0.24"
strum_macros = "0.24"

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = ["libm"]