[package]
name = "anima_rs"
version = "0.1.0"
edition = "2021"

[features]
graphical-tests = []

[dependencies]
derive_more = "0.99.16"
cgmath = "0.18.0"
strum = "0.24"
strum_macros = "0.24"

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = ["libm"]

[dependencies.core_extensions]
version = "1.5"
features = [
    # Requires the latest stable release, enables all the rust-version-dependent features
    "rust_latest_stable",
    # enables all the item features
    "all_items",
]

[build-dependencies]
cargo-emit = "0.1"

[dev-dependencies.pretty_assertions]
version = "1.1.0"
default-features = false
features = ["alloc"]